[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rda_python_common"
version = "2.1.12"
authors = [
  { name="Zaihua Ji", email="zji@ucar.edu" },
]
description = "RDA Python common library codes shared by other RDA python packages"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
]
dependencies = [
  "psycopg2-binary",
  "psutil",
  "rda-python-globus",
  "unidecode",
  "hvac"
]

[project.optional-dependencies]
# Allow opting in to psycopg (v3) instead of psycopg2.  pg_dbi.py auto-detects
# which driver is installed and prefers psycopg2 when both are available.
psycopg3 = ["psycopg[binary]"]

[project.urls]
"Homepage" = "https://github.com/NCAR/rda-python-common"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.setuptools.package-data]
rda_python_common = ["*.usg"]

[project.scripts]
pgpassword = "rda_python_common.pgpassword:main"
