[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rda_python_common"
version = "3.0.1"
authors = [
  { name="Zaihua Ji", email="zji@ucar.edu" },
]
description = "RDA Python common library codes shared by other RDA python packages"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
]
dependencies = [
  "psycopg",
  "psutil",
  "rda-python-globus",
  "unidecode",
  "hvac"
]

[project.optional-dependencies]
# Allow opting in to the legacy psycopg2 driver instead of psycopg (v3).
# pg_dbi.py auto-detects which driver is installed and prefers psycopg (v3)
# when both are available.
psycopg2        = ["psycopg2"]           # psycopg2 built from source
psycopg2-binary = ["psycopg2-binary"]    # psycopg2 pre-built C extension

[project.urls]
"Homepage" = "https://github.com/NCAR/rda-python-common"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.setuptools.package-data]
rda_python_common = ["*.usg"]

[project.scripts]
pgpassword = "rda_python_common.pgpassword:main"
